--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  tapioca_v2: #^0.3.1
+    git:
+      url: https://github.com/pastordee/tapioca_v2.git
+      ref: main
+
   path: ^1.8.0 # update to `1.8.1` causes #79
   path_provider: ^2.0.12
   transparent_image: ^2.0.1 # show fade-in placeholder in thumbnails generation
   video_player: ^2.6.1
   video_thumbnail: ^0.5.3
-  tapioca_v2: ^1.0.0+2
+  video_kit: ^0.0.1
 
 dev_dependencies:
   flutter_test:
